...
              child: const Text('Cancel'),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
            TextButton(
              child: const Text('Add'),
              onPressed: () async {
                if (formKey.currentState!.validate()) {
                  setState(() { _isLoading = true; });
                  Navigator.of(context).pop(); // Close dialog
                  RssFeedSource? newSource = await _rssService.addFeedSource(urlController.text);
                  if (newSource != null) {
...
