...
    }

    RssFeedSource? selectedSource = await showDialog<RssFeedSource>(
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: const Text('Select RSS Feed'),
          content: SizedBox(
            width: double.minPositive,
            child: ListView.builder(
              shrinkWrap: true,
              itemCount: sources.length,
              itemBuilder: (BuildContext context, int index) {
...
