...
                }
              },
              itemBuilder: (BuildContext context) => <PopupMenuEntry<String>>[
                const PopupMenuItem<String>(value: 'add_dynamic_label', child: Text('Add Dynamic Label')),
                const PopupMenuItem<String>(value: 'add_notepad', child: Text('Add Notepad')),
                const PopupMenuItem<String>(value: 'add_placeholder', child: Text('Add Placeholder')),
                const PopupMenuItem<String>(value: 'add_rss_summary', child: Text('Add RSS Summary')),
                const PopupMenuItem<String>(value: 'add_webradio_status', child: Text('Add WebRadio Status')),
              ],
            ),
          ),
        ],
      ),
...
